start styling - centre header

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </header>
     <main>
       <div class="gallery-head">
-        <h2>There are <a href="#">6</a> </h2>
+        <h2>There are <a href="#">6</a> photos</h2>
       </div>
       <div class="layout">
         <div class="picpanel">
@@ -38,5 +38,6 @@
         </div>
       </div>
     </main>
+    <footer>C Bitmaker 2016</footer>
   </body>
 </html>
