--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>css-display-layout</title>
+    <!-- <link rel="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css"> -->
     <link rel="stylesheet" href="https://necolas.github.io/normalize.css/5.0.0/normalize.css">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -31,6 +32,38 @@
         <div class="picpanel">
           <div class="pic">
             <img src="https://picsum.photos/300/400/?image=242" alt="random pic">
+          </div>
+          <div class="options">
+            <p><a href="#">Edit</a> | <a href="#">Delete</a></p>
+          </div>
+        </div>
+        <div class="picpanel">
+          <div class="pic">
+            <img src="https://picsum.photos/300/400/?image=243" alt="random pic">
+          </div>
+          <div class="options">
+            <p><a href="#">Edit</a> | <a href="#">Delete</a></p>
+          </div>
+        </div>
+        <div class="picpanel">
+          <div class="pic">
+            <img src="https://picsum.photos/300/400/?image=244" alt="random pic">
+          </div>
+          <div class="options">
+            <p><a href="#">Edit</a> | <a href="#">Delete</a></p>
+          </div>
+        </div>
+        <div class="picpanel">
+          <div class="pic">
+            <img src="https://picsum.photos/300/400/?image=240" alt="random pic">
+          </div>
+          <div class="options">
+            <p><a href="#">Edit</a> | <a href="#">Delete</a></p>
+          </div>
+        </div>
+        <div class="picpanel">
+          <div class="pic">
+            <img src="https://picsum.photos/300/400/?image=239" alt="random pic">
           </div>
           <div class="options">
             <p><a href="#">Edit</a> | <a href="#">Delete</a></p>
