--- a/index.html
+++ b/index.html
@@ -71,6 +71,6 @@
         </div>
       </div>
     </main>
-    <footer>C Bitmaker 2016</footer>
+    <footer><p>&#169; Bitmaker 2016</p></footer>
   </body>
 </html>
